# AAAim

./: .gitignore  AGENTS.md
aim_trt_pack/: CMakeLists.txt  README.md
aim_trt_pack/include/: aim_control.h  app_config.h  control_panel.h  mouse_driver.h  ort_trt_infer.h  perf_logger.h  pipeline_types.h  preview_renderer.h  runtime_helpers.h  runtime_tuning.h  screen_capture_dxgi.h  target_selector.h  yolo_decoder.h
aim_trt_pack/models/: CS2_1_CLS.yaml  CS2_4_CLS.yaml
aim_trt_pack/src/: aim_control.cpp  app_main.cpp  control_panel.cpp  dll_motion_demo.cpp  ort_trt_infer.cpp  perf_logger.cpp  preview_renderer.cpp  runtime_helpers.cpp  target_selector.cpp  yolo_decoder.cpp
yolov5-6.0/: best.pt  detect.py  export.py  inference.py  requirements.txt  run.py  train.py
yolov5-6.0/data/: ball.yaml
yolov5-6.0/data_process/: data_process.ipynb
